--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "array-move": "^3.0.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "concat-stream": "^2.0.0",
     "history": "^4.10.1",
     "hoist-non-react-statics": "^3.3.2",
     "lodash": "^4.17.15",
