--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "suneditor-react": "^2.14.2",
+    "swiper": "6.0.2",
     "uuid": "^7.0.3"
   },
   "scripts": {
