--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-jw-player": "^1.19.1",
     "react-modal": "^3.11.2",
     "react-parallax": "^3.0.3",
+    "react-phone-input-2": "^2.14.0",
     "react-player": "^2.0.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
