--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap-table2-toolkit": "^2.1.2",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.13.1",
+    "react-dropdown-date": "^2.2.7",
     "react-easy-crop": "^3.5.2",
     "react-ga": "^2.7.0",
     "react-infinite-scroller": "^1.2.4",
